# PAGame

./: PA.json  PAGame.code-workspace  backup.sh  glob.py  meson.build
assets/: test.tmj  test_block.tsj
pch/: pagame.hpp
src/pa/: common.hpp  concepts.hpp  hash.hpp  log.hpp  main.cpp  num_types.hpp  simple_gettersetter.hpp
src/pa/comp/: area_colliders.hpp  area_response.hpp  camera.hpp  drawable.hpp  moving_body.hpp  physical_body.hpp  physical_colliders.hpp  player.hpp  position.hpp  sprites.hpp  world.hpp
src/pa/core/: app.cpp  app.hpp  config.cpp  config.hpp  id.cpp  id.hpp  resource_manager.cpp  resource_manager.hpp  state.cpp  state.hpp  world_loader.cpp  world_loader.hpp
src/pa/drawing/: sprite.hpp
src/pa/factory/: area_collider.hpp  camera.hpp  drawable.hpp  moving_body.hpp  physical_body.hpp  physical_collider.hpp  player.hpp  position.hpp  sprite.hpp  world.hpp
src/pa/physics/: aabb.hpp  collider.hpp  layer.hpp  mask.hpp
src/pa/raylib/: texture2d_deleter.hpp
src/pa/resource_id/: texture_id.hpp
src/pa/system/: physics.cpp  physics.hpp  player.cpp  player.hpp  render.cpp  render.hpp
src/pa/tag/: player.hpp
subprojects/: entt.wrap  fmt.wrap  glaze.wrap  glm.wrap  komihash.wrap  raylib.wrap  unordered_dense.wrap
subprojects/packagefiles/entt/: meson.build
subprojects/packagefiles/fmt/: meson.build
subprojects/packagefiles/glaze/: meson.build
subprojects/packagefiles/glm/: meson.build
subprojects/packagefiles/komihash/: meson.build
subprojects/packagefiles/unordered_dense/: meson.build
